--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,5 @@ before_install:
   - gcloud config set project multi-k8s-338600
   - gcloud config set compute/zone us-east1-b
   - gcloud container clusters get-credentials multi-cluster
+  - echo "$DOCKER_PASSWORD" | docker login -u "DOCKER_USERNAME" --password-stdin
+  
